SERVER-55652 add statistics key to WiredTigerUtil::getStatisticsValue() cursor not found error message